@@ -1,45 +1,0 @@
-.\" Manpage for linotp.
-.\" Copyright (C) 2019-     netgo software GmbH
-
-.TH linotp-audit-janitor 1 "10 Aug 2020" "3.0" "LinOTP"
-
-.SH NAME
-linotp-audit-janitor \- remove old entries from the audit table.
-
-.SH SYNOPSIS
-\fIlinotp audit-janitor\fR [--max=<max entries>] [--min=<min entries>] [--exportdir=<path to export removed entries>]
-
-.SH DESCRIPTION
-This tool removes old entries from the audit table. If more than "max" entries
-are in the audit table, older entries will be deleted so that only "min"
-entries remain in the table. If "exportdir" is given, the removed entries will
-be exported as "SQLData.year.month.day-max_id.csv"
-
-.SH COMMON OPTIONS
-
-.PP
-\fB\--max=<max entries>\fR
-.RS 4
-The maximum entries. If not given, 10.000 as default is assumed.
-.RE
-
-.PP
-\fB\--min=<min entries>\fR
-.RS 4
-The minimum old remaining entries which will be left in database. If not given
-5.000 as default is assumed.
-.RE
-
-.PP
-\fB\--exportdir=<path to export removed entries>\fR
-.RS 4
-If not given, no export will be done. If --export dir is defined all entries
-which are removed will be exported inio a csv file into the directory path
-given as "SQLData.year.month.day-max_id.csv"
-.RE
-
-.SH SEE ALSO
-\fBlinotp\fR(1)
-
-.SH INTERNET SOURCES
-https://www.linotp.org
