@@ -23,9 +23,9 @@ administration clients make it easy to integrate into your environment.
 Below is a list of the commands provided by LinOTP for your convenience.
 Each of them has a detailed manpage you can refer to.
 
-\fBlinotp-audit-janitor\fR(1)
+\fBlinotp-audit-cleanup\fR(1)
 .RS 4
-\fIlinotp audit-janitor\fR clears old entries from the audit log.
+\fIlinotp audit cleanup\fR clears old entries from the audit log.
 .RE
 
 \fBlinotp-backup\fR(1)
