@@ -6,6 +6,11 @@ linotp (3.4~dev0-1) UNRELEASED; urgency=low
     * option `--no-export` is removed
     * option `--export` is added to trigger the export
     * export is disabled by default. Use `linotp audit cleanup --export` to trigger it.
+    * replace options `--min` and `--max` in favor of `--max-entries-to-keep` and `--cleanup-threshold`:
+      * `--max-entries-to-keep` specifies the number of entries to keep in the db. Defaults to 5000.
+      * `--cleanup-threshold`: When the number of entries exceeds this threshold, the cleanup process is initiated.
+        Defaults to the value of `--max-entries-to-keep`.
+    
 
   Fix:
   * wrongly aligned resize bar on Manage UI flexigrid tables when browser is zoomed or scaled
